--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jbuilder/jbuilder",
     "type": "library",
-    "description": "This is a library for creating the structure of the JSON for PHP",
+    "description": "This is a library for creating the structure of the JSON for PHP 5.4+",
     "keywords": ["json", "library"],
     "license": "MIT",
     "authors": [
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.4"
     },
     "autoload": {
       "psr-0": { "JBuilder": "src/" }
