--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
     },
     "autoload": {
       "psr-0": { "JBuilder\\Common": "src/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
